--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,6 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         version:
+          - '1.10'   # LTS
           - '1.12'
         os:
           - ubuntu-latest
